<resources>
    <string name="app_name">Coinz</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="createAnAcc">Create An Account</string>
    <string name="title">Coinz</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirm Password</string>
    <string name="createAcc">Create Account</string>
    <string name="access_token">pk.eyJ1Ijoic2VhbnN0OTgiLCJhIjoiY2pudnZ5ZXpvMWRrajNrcXFsdHplYjM2YyJ9.q3PKOuUDWjhjfwdCo0iXVw</string>
    <string name="bank_wallet">Bank Account and Wallet</string>
    <string name="personal_info">Personal Information</string>
    <string name="optFeatures">Optional Features</string>
    <string name="statistics">Statistics</string>
    <string name="deposit">Deposit</string>
    <string name="gift">Gift</string>
    <string name="bankcoinstxt">You Have Collected </string>
    <string name="bankcoinstxt2">Coins Today</string>
    <string name="bankgoldtxt">You Have </string>
    <string name="bankgoldtxt2">GOLD Stored In The Bank</string>
    <string name="depostitxt">Enter How Many Coins To Deposit</string>
    <string name="giftnametxt">UID Of User To Gift To</string>
    <string name="giftamounttxt">Amount To Gift</string>
    <string name="dolr">DOLR</string>
    <string name="shil">SHIL</string>
    <string name="quid">QUID</string>
    <string name="peny">PENY</string>
    <string name="coins">Coins</string>
    <string name="retrieve">Check For Coins</string>
    <string name="deleteAcc">Delete Your Account</string>
    <string name="updateEmail">Update Your Email</string>
    <string name="updatePassword">Change Your Password</string>
    <string name="logOut">Log Out</string>
    <string name="updateEmailTxt">Enter Your New Email</string>
    <string name="updatePasswordTxt">Enter Your New Password</string>
    <string name="activateGhost">Activate Ghost Mode</string>
    <string name="activateTimeTrial">Activate Time Trial Mode</string>
    <string name="menu">Menu</string>
</resources>
