<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_bank"
            android:title="@string/bank_wallet"
            android:icon="@drawable/ic_bank"/>
        <item
            android:id="@+id/drawer_personal"
            android:title="@string/personal_info"
            android:icon="@drawable/ic_person"/>
        <item
            android:id="@+id/drawer_optional"
            android:title="@string/optFeatures"
            android:icon="@drawable/ic_features"/>
        <item
            android:id="@+id/drawer_statistics"
            android:title="@string/statistics"
            android:icon="@drawable/ic_statistics"/>

    </group>

</menu>